--- a/client/src/api/Files/File/file.css
+++ b/client/src/api/Files/File/file.css
@@ -16,14 +16,22 @@
     font-size: 40px;
 }
 
-.imgFile {
-    width: 800px;
-    border-radius: 5px;
-    border: 2px solid black;
-    box-shadow: 10px 10px 10px rgb(51, 51, 51);
+.fileUnloggTitle{
+    margin-top: 50px;
+    font-size: 30px;
 }
 
-.tablafile {
+.imgDiv{
+    width: auto;
+}
+.imgFile {
+    max-width: 800px;
+    border-radius: 5px;
+    border: 2px solid black;
+    box-shadow: 20px 20px 20px black;
+}
+
+.fileTable {
     border: 2px solid black;
     border-radius: 10px;
     background-color: white;
@@ -48,6 +56,11 @@
     width: 100%;
 }
 
+.fileUnloggButtons {
+    margin-top: 5vh;
+    width: 100%;
+}
+
 
 @media only screen and (max-width:767px) {
     .file {
@@ -59,14 +72,19 @@
         font-size: 30px;
     }
 
-    .tablafile {
+    .fileUnloggTitle{
+        margin-top: 10px;
+        font-size: 30px;
+    }
+
+    .fileTable {
         border: 1px solid black;
         border-radius: 5px;
         width: 200px;
     }
 
     .imgFile {
-        width: 300px;
+        width: 350px;
         border-radius: 5px;
         border: 2px solid black;
         box-shadow: 10px 10px 10px rgb(51, 51, 51);
@@ -82,8 +100,9 @@
 
     .fileButtons {
         margin-top: 4vh;
-
     }
-
+    .fileUnloggButtons{
+        margin-top: 330px;
+    }
 
 }
