--- a/client/src/api/Files/files.css
+++ b/client/src/api/Files/files.css
@@ -11,11 +11,12 @@
 
 .filesTitle {
     margin-top: 30px;
+    font-size: 40px;
     
 }
 
-.fileButtons {
-    margin-top: 79vh;
+.filesButtons {
+    margin-top: 5vh;
     width: 100%;
 }
 
@@ -25,12 +26,14 @@
     }
 
     .filesTitle {
-        margin-top: 10px;
+        margin-top: 20px;
+        font-size: 25px;
         
     }
 
-    .fileButtons {
-        margin-top: 80vh;
+    .filesButtons {
+        margin-top: 19vh;
+        margin-bottom: 10px;
     }
 
 }
