--- a/client/src/api/Reserves/reserves.css
+++ b/client/src/api/Reserves/reserves.css
@@ -11,15 +11,17 @@
 }
 
 .reservesTitle {
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 40px;
+    font-size: 40px;
+}
+
+.reservesTable {
+    margin-top: 150px;
+    width: 700px;
 }
 
 .reservesButtons {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 25vh;
-    width: 100%;
+    margin-top: 15vh;
 }
 
 @media only screen and (max-width:767px) {
@@ -29,12 +31,18 @@
 
     .reservesTitle {
         margin-top: 10px;
-        margin-bottom: 10px;
-        margin-bottom: 5px;
+        font-size: 30px;
+    }
+
+    .reservesTable {
+        margin-top: 100px;
+       width: auto;
+        
     }
 
     .reservesButtons {
-        margin-top: 19vh;
+        margin-top: 9vh;
+        margin-bottom: 10px;
     }
 
 }
