--- a/client/src/components/tablaFiles/tablaFiles.css
+++ b/client/src/components/tablaFiles/tablaFiles.css
@@ -1,7 +1,8 @@
 .tablaFiles {
-    padding: 10px;
+    padding: 0px;
     border: 2px solid black;
     border-radius: 10px;
+    box-shadow: 20px 20px 10px black;
     background-color: white;
     display: flex;
     justify-content: center;
@@ -16,9 +17,10 @@
 
     .tablaFiles {
         font-size: 12px;
-        padding: 2px;
+        padding: 0px;
         border: 1px solid black;
         border-radius: 5px;
+        box-shadow: 10px 10px 5px black;
         max-height: 200px;
     }
 
