--- a/client/src/components/tablaReserves/tablaReserves.css
+++ b/client/src/components/tablaReserves/tablaReserves.css
@@ -5,15 +5,38 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 800px;
-    max-height: 300px;
+}
+
+.head2Reserves {
+    margin-bottom: 10px;
+    display: flex;
+    justify-content:space-between;
+    font-size: 25px;
+}
+
+.linkReserves {
+    color: black;
+    text-decoration: none;
+}
+
+.link2Reserves{
+display: flex;
+justify-content:space-between;
 }
 @media only screen and (max-width:767px) {
-   .tablaReserves{
-    border: 1px solid black;
-    width: 330px;
-    max-height: 400px;
-    font-size: 12px;
+    .tablaReserves {
+        border: 1px solid black;
+    }
 
+    .head2Reserves {
+        font-size: 16px;
+    }
+
+   .divReserves{
+    font-size: 14px;
    }
+
+    .divPartic{
+        font-size: 12px;
+    }
 }
