--- a/client/src/api/Logout/logout.css
+++ b/client/src/api/Logout/logout.css
@@ -1,14 +1,33 @@
+
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-.login {
+.logout {
     background-color: rgb(210, 211, 211);
 }
 
-.buttons1 {
+.bodyLogout{
+    padding: 10px;
+}
+
+.logoutTitle {
+    font-size: 40px;
+    margin-top: 20px;
+}
+
+.logoLogout{
+    max-width: 500px;
+    height: auto;
+    margin-top: 170px;
+   
+}
+
+.buttonsLogout {
     margin-top: 25vh;
     margin-bottom: 2vh;
     width: 100%;
@@ -16,10 +35,20 @@
 
 
 @media only screen and (max-width:767px) {
-    .buttons1 {
-        margin-top: 18vh;
+
+    .logoutTitle {
+        font-size: 25px;
+        margin-top: 20px;
     }
-    .container {
-        padding-bottom: 1px;
+    
+    .logoLogout{
+        max-width: 300px;
+        height: auto;
+        margin-top: 90px;
+       
+    }
+
+    .buttonsLogout {
+        margin-top: 22vh;
     }
 }
