--- a/client/src/components/tablaEvents/tablaEvents.css
+++ b/client/src/components/tablaEvents/tablaEvents.css
@@ -7,6 +7,10 @@
     justify-content: center;   
 }
 
+.headEvents{
+    max-height: 500px;
+}
+
 .head2Events {
     margin-bottom: 10px;
     display: flex;
@@ -19,28 +23,33 @@
     text-decoration: none;
 }
 
+.bodyEvents {
+    display: flex;
+    justify-content: center;
+    }
+
 .link2Events{
     display: flex;
     justify-content: space-between;
 }
 
-
-.bodyEvents {
-    display: flex;
-    justify-content: center;
-    }
 @media only screen and (max-width:767px) {
     .tablaEvents {
         border: 1px solid black;
     }
 
+    .headEvents{
+        max-height: 200px;
+    }
+    
     .head2Events {
         font-size: 16px;
     }
 
     .divEvents{
-        font-size: 14px;
+        font-size: 12px;
     }
+    
     .divDateAct{
         font-size: 12px;
     }
