--- a/client/src/api/Events/AddEvent/addEvent.css
+++ b/client/src/api/Events/AddEvent/addEvent.css
@@ -4,44 +4,47 @@
     box-sizing: border-box;
 }
 
+.addEvent {
+    background-color: rgb(210, 211, 211);
+}
+
 .addEventTitle {
     font-size: 40px;
 }
 
-.addEvent {
-    background-color: rgb(210, 211, 211);
+.centerAddEvent{
+    padding: 10px;
 }
 
 .inputsAddEvent {
     border: 2px solid black;
     border-radius: 20px;
-    padding: 20px;
-    margin-top: 10vh;
+    padding: 20px;  
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     max-width: 600px;
     background-color: rgb(241, 231, 231);
-
+    margin-top: 10vh;
 }
 
 .addEventName {
-    width: 200px;
+    width: 250px;
     margin-bottom: 12px;
 }
 
 .addEventDescription {
-    width: 200px;
+    width: 250px;
     margin-bottom: 12px;
 }
 
 .addEventActivity {
-    width: 200px;
+    width: 250px;
     margin-bottom: 12px;
 }
 
 .addEventPrice {
-    width: 200px;
+    width: 250px;
     margin-bottom: 12px;
 }
 
@@ -51,21 +54,26 @@
 }
 
 .AddEventButtons {
-    margin-top: 24vh;
+    margin-top: 26vh;
 }
 
 @media only screen and (max-width:767px) {
 
+  .centerAddEvent{
+        padding: 5px;
+    }
+
     .addEventTitle {
         font-size: 20px;
+        margin-top: 10px;
     }
 
     .inputsAddEvent {
+        padding: 10px;
         margin-top: 10px;
     }
 
     .AddEventButtons {
         margin-top: 2vh;
-        margin-bottom: 2vh;
     }
 }
