--- a/client/src/api/Events/Event/event.css
+++ b/client/src/api/Events/Event/event.css
@@ -11,34 +11,37 @@
 }
 
 .eventTitle {
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 10px;
     font-size: 40px;
 }
-.tablaEvent{
-    border: 2px solid black;
-    border-radius: 10px;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    text-align: start;
-    width: 600px;
+
+.centerEvent {
     padding: 10px;
 }
 
-.reqEvent{
-    font-size: 25px;
+.tablaEvent {
+    border: 2px solid black;
+    border-radius: 10px;
+    box-shadow: 10px 10px 10px black;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    max-width: 700px;
+    max-height: 310px;
+    padding: 20px;
+    margin-top: 100px;
 }
 
-.resEvent{
-font-size: 20px;
+.reqEvent {
+    font-size: 20px;
 }
 
-
-
+.resEvent {
+    font-size: 20px;
+}
 
 .eventButtons {
-    margin-top: 5vh;
+    margin-top: 17vh;
     width: 100%;
 }
 
@@ -53,24 +56,32 @@ font-size: 20px;
         font-size: 30px;
     }
 
- .tablaEvent{
-        border: 1px solid black;
-        border-radius: 5px;
-        width: 300px;
+    .centerEvent {
+        padding: 5px;
     }
 
-    .reqEvent{
-        font-size: 18px;
+    .tablaEvent {
+        border: 1px solid black;
+        box-shadow: 5px 5px 5px black;
+        border-radius: 5px;
+        width: 300px;
+        max-height: 190px;
+        padding: 10px;
+        margin-top: 80px;
     }
-    
-    .resEvent{
-    font-size: 14px;
+
+    .reqEvent {
+        font-size: 16px;
+    }
+
+    .resEvent {
+        font-size: 14px;
     }
 
     .eventButtons {
-        margin-top: 4vh;
-       
+        margin-top: 10vh;
+
     }
-   
-   
+
+
 }
