--- a/client/src/api/Events/events.css
+++ b/client/src/api/Events/events.css
@@ -10,41 +10,44 @@
     height: auto;
 }
 
+.centerEvents {
+    padding: 10px;
+
+}
+
 .eventsTitle {
-    margin-top: 40px;
     font-size: 40px;
+    margin-top: 30px;
 }
 
 .eventsTable {
-    margin-top: 150px;
-    width: 700px;
+    max-height: 500px;
+    max-width: 600px;
+    margin-top: 20px;
 }
 
 .eventsButtons {
-    margin-top: 34vh;
-    margin-bottom: 1px;
+    margin-top: 9vh;
 }
 
 
 @media only screen and (max-width:767px) {
-    .events {
-        margin-top: 2px;
+
+    .centerEvents {
+        padding: 5px;
     }
 
     .eventsTitle {
-        margin-top: 20px;
-        font-size: 30px;
+        margin-top: 10px;
+        font-size: 25px;
     }
 
     .eventsTable {
-        margin-top: 100px;
-       width: auto;
-        
+        max-width: 350px;
+        margin-top: 35px;
     }
 
     .eventsButtons {
-        margin-top:27vh;
-        margin-bottom: 10px;
+        margin-top: 26vh;
     }
-
 }
