--- a/client/src/api/Files/File/file.css
+++ b/client/src/api/Files/File/file.css
@@ -11,22 +11,26 @@
 }
 
 .fileTitle {
+    font-size: 40px; 
     margin-top: 30px;
-    margin-bottom: 30px;
-    font-size: 40px;
 }
 
-.fileUnloggTitle{
-    margin-top: 50px;
-    font-size: 30px;
+.centerFile {
+    padding: 10px;
 }
 
-.imgDiv{
-    width: auto;
+.fileUnloggTitle {
+    font-size: 50px;
+    margin-top: 250px;
 }
+
+.imgDiv {
+    margin-top: 20px;
+}
+
 .imgFile {
-    max-width: 800px;
-    border-radius: 5px;
+    padding: 0px;
+    border-radius: 10px;
     border: 2px solid black;
     box-shadow: 20px 20px 20px black;
 }
@@ -34,30 +38,27 @@
 .fileTable {
     border: 2px solid black;
     border-radius: 10px;
+    box-shadow: 10px 10px 10px black;
     background-color: white;
     display: flex;
     flex-direction: column;
-    text-align: start;
-    width: 600px;
-    padding: 10px;
-    margin-top: 20px;
+    max-height: 250px;
+    max-width: 600px;
+    margin-top: 40px;
 }
 
 .reqfile {
-    font-size: 25px;
-}
-
-.resfile {
     font-size: 20px;
 }
 
+
 .fileButtons {
-    margin-top: 5vh;
+    margin-top: 1vh;
     width: 100%;
 }
 
 .fileUnloggButtons {
-    margin-top: 5vh;
+    margin-top: 37vh;
     width: 100%;
 }
 
@@ -69,40 +70,46 @@
 
     .fileTitle {
         margin-top: 10px;
+        font-size: 25px;
+    }
+
+    .fileUnloggTitle {
+        margin-top: 200px;
         font-size: 30px;
     }
 
-    .fileUnloggTitle{
-        margin-top: 10px;
-        font-size: 30px;
+    .centerFile {
+        padding: 5px;
     }
 
-    .fileTable {
-        border: 1px solid black;
-        border-radius: 5px;
-        width: 200px;
+    .imgDiv {
+        margin-top: 0px;
     }
 
     .imgFile {
         width: 350px;
         border-radius: 5px;
-        border: 2px solid black;
-        box-shadow: 10px 10px 10px rgb(51, 51, 51);
+        box-shadow: 5px 5px 5px rgb(51, 51, 51);
+    }
+
+    .fileTable {
+        border: 1px solid black;
+        border-radius: 5px;
+        max-height: 150px;
+        max-width: 300px;
+        margin-top: 20px;
     }
 
     .reqfile {
-        font-size: 18px;
-    }
-
-    .resfile {
         font-size: 14px;
     }
 
     .fileButtons {
         margin-top: 4vh;
     }
-    .fileUnloggButtons{
-        margin-top: 330px;
+
+    .fileUnloggButtons {
+        margin-top: 22vh;
     }
 
 }
