--- a/client/src/api/Login/login.css
+++ b/client/src/api/Login/login.css
@@ -4,19 +4,56 @@
     box-sizing: border-box;
 }
 
-.logout {
+.login{
     background-color: rgb(210, 211, 211);
+    padding-bottom: 10px;
 }
 
-.buttonsLogout {
-    margin-top: 25vh;
-    margin-bottom: 2vh;
+.loginTitle {
+    font-size: 40px;
+}
+
+.inputsLogin {
+    border: 2px solid black;
+    border-radius: 20px;
+    margin-top: 8vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    background-color: rgb(241, 231, 231);
+    max-width: 600px; 
+}
+
+.loginEmail {
+    width: 250px;
+    margin-bottom: 12px;
+}
+
+.loginPassword {
+    width: 250px;
+    margin-bottom: 12px;
+}
+
+.loginButtons{
+    margin-top: 39vh;
     width: 100%;
 }
 
-
 @media only screen and (max-width:767px) {
-    .buttonslogOut {
-        margin-top: 18vh;
+
+    .login{
+        padding-bottom: 8px;
+    }
+
+    .loginTitle {
+        font-size: 20px;
+    }
+
+    .inputsLogin {
+        margin-top: 10px;
+    }
+
+    .loginButtons {
+        margin-top: 19vh;
     }
 }
