--- a/client/src/api/Register/register.css
+++ b/client/src/api/Register/register.css
@@ -6,21 +6,70 @@
 
 .register{
     background-color: rgb(210, 211, 211);
+    padding-bottom: 10px;
 }
 
-.buttons{
-    margin-top: 27vh;
-    width: 100%;
+.registerTitle {
+    font-size: 40px;
 }
-.container{
-    padding-bottom: 22px;
+
+.inputsRegister {
+    border: 2px solid black;
+    border-radius: 20px;
+    padding: 20px;
+    margin-top: 8vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    background-color: rgb(241, 231, 231);
+    max-width: 600px; 
+}
+
+.registerName {
+    width: 250px;
+    margin-bottom: 12px;
+}
+
+.registerSurname {
+    width: 250px;
+    margin-bottom: 12px;
+}
+
+.registerCity {
+    width: 250px;
+    margin-bottom: 12px;
+}
+
+.registerEmail {
+    width: 250px;
+    margin-bottom: 12px;
+}
+
+.registerPassword {
+    width: 250px;
+    margin-bottom: 12px;
+}
+
+.registerButtons{
+    margin-top: 17vh;
+    width: 100%;
 }
 
 @media only screen and (max-width:767px) {
-    .buttons {
-        margin-top: 2vh;
+
+    .register{
+        padding-bottom: 10px;
     }
-    .container {
-        padding-bottom: 2vh;
+
+    .registerTitle {
+        font-size: 20px;
+    }
+
+    .inputsRegister {
+        margin-top: 10px;
+    }
+
+    .registerButtons {
+        margin-top: 3vh;
     }
 }
