--- a/client/src/components/header/Header.css
+++ b/client/src/components/header/Header.css
@@ -2,11 +2,39 @@
     width: 100%;
 }
 
+.welcomeHeader{
+    display: flex;
+    justify-content: center;
+}
+
+.titleHead{
+    font-size: 40px;
+}
 .menu{
 display: flex;
 justify-content:end
 }
 
 .p{
-    font-size: 10px;
+    font-size: 14px;
+    margin: 0px;
+}
+
+@media only screen and (max-width:767px) {
+
+    .titleHead{
+        font-size: 20px;
+    }
+
+    .welcomeHeader{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .p{
+        font-size: 10px;
+        
+        
+    }
+    
 }
