--- a/client/src/components/tablaActivities/tablaActivities.css
+++ b/client/src/components/tablaActivities/tablaActivities.css
@@ -4,51 +4,53 @@
     background-color: white;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    width: 600px;
-    
+    justify-content: center;   
 }
 
-.tdClass {
-    color: black;
-    text-decoration: none;
+.headActivities {
+    max-height: 500px;
 }
 
-.linkActivities {
-
+.head2Activities {
     margin-bottom: 10px;
     display: flex;
     justify-content: space-between;
     font-size: 25px;
-
-
 }
 
-.linkActivities2 {
+.linkActivities {
+    color: black;
+    text-decoration: none;
+}
+
+.bodyActivities {
+    display: flex;
+    justify-content: center;
+    }
+
+.link2Activities{
     display: flex;
     justify-content: space-between;
-    font-size: 20px;
-
 }
 
 @media only screen and (max-width:767px) {
+
     .tablaActivities {
         border: 1px solid black;
-        width: 250px;
-        max-height: 500px;
     }
 
-    .linkActivities {
-        border-radius: 5px;
+    .headActivities {
+        max-height: 300px;
+    }
+
+    .head2Activities {
         font-size: 16px;
-        margin-bottom: 3px;
     }
 
-    .linkActivities2 {
+    .divActivName{
         font-size: 14px;
-
     }
-
-
-
+    .divActivPay{
+        font-size: 12px;
+    }
 }
