--- a/client/src/components/tablaFiles/tablaFiles.css
+++ b/client/src/components/tablaFiles/tablaFiles.css
@@ -3,13 +3,10 @@
     border: 2px solid black;
     border-radius: 10px;
     box-shadow: 20px 20px 10px black;
-    background-color: white;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    height: 800px;
+    max-height: 800px;
 }
 
 
@@ -19,8 +16,8 @@
         font-size: 12px;
         padding: 0px;
         border: 1px solid black;
+        box-shadow: 5px 5px 5px black; 
         border-radius: 5px;
-        box-shadow: 10px 10px 5px black;
         max-height: 200px;
     }
 
