--- a/client/src/components/tablaUsers/tablaUsers.css
+++ b/client/src/components/tablaUsers/tablaUsers.css
@@ -4,13 +4,17 @@
     background-color: white;
     display: flex;
     flex-direction: column;
-    justify-content: center;  
+    justify-content: center;
+}
+
+.headUsers {
+    max-height: 500px;
 }
 
 .head2Users {
     margin-bottom: 10px;
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     font-size: 25px;
 }
 
@@ -19,25 +23,35 @@
     text-decoration: none;
 }
 
-.link2Users{
-display: flex;
-justify-content:space-between;
+.bodyUsers {
+    display: flex;
+    justify-content: center;
+}
+
+.link2Users {
+    display: flex;
+    justify-content: space-between;
 }
 
 @media only screen and (max-width:767px) {
+    
     .tablaUsers {
         border: 1px solid black;
+    }
+
+    .headUsers {
+        max-height: 300px;
     }
 
     .head2Users {
         font-size: 16px;
     }
 
-   .divUsers{
-    font-size: 14px;
-   }
+    .divUsers {
+        font-size: 14px;
+    }
 
-    .divMail{
+    .divMail {
         font-size: 12px;
     }
 }
